# OrcaGym_Assets

./: README.md  pyproject.toml
mujoco/: ant.xml  pusher_v5.xml
robots/deeprobotics/: Lite3.xml
robots/deeprobotics/Lite3/: Lite3.xml
robots/franka/: PandaToys.xml  gripper_mocap.xml  panda_mocap_moto.xml
robots/linxai/A01B/: A01B_URDF.xml
robots/openloong/models/: AzureLoong_fix_base_2f85.xml  AzureLoong_legged_arms_bended.xml  AzureLoong_mobile_base_2f85.xml  openloong_gripper_2f85_fix_base.xml  openloong_gripper_2f85_mobile_base.xml
robots/orcabot/: orcabot_01.xml
robots/unitree/g1/: g1_12dof_position.xml  g1_29dof_rev_1_0_position.xml
robots/unitree/go2/: go2.xml
scene_assets/pikachu/: pikachu.xml  pikachu_low.mtl
terrains/legged_gym/: terrain_brics.xml  terrain_brics_high.xml  terrain_brics_low.xml  terrain_perlin_rough.xml  terrain_perlin_rough_slope.xml  terrain_perlin_smooth.xml  terrain_perlin_smooth_slope.xml  terrain_slope_10.xml  terrain_slope_20.xml  terrain_stair_high.xml  terrain_stair_low.xml  terrain_stair_low_flat.xml  terrain_test.xml
